Fixing broken links
Fixed broken links, removed a couple references to the Delta Format and the Realms Interest Form. A couple of links were changed to their Wayback Machine versions until a new link gets found (on the `using-postman` and `understanding-github` pages). Also changed all internal links to relative paths for consistency.

Note: Some relative paths (like those in the root of `boba-backend` need to use `./` instead of `../` for other pages in the same folder because they're auto-generated (probably).

Note: Links to `/api-guidelines` are actually case-sensitive and while the filename has it capitalised, the generated URL path is lowercase, so links to that page had to be changed from `API-guidelines` to `api-guidelines`.)

--- a/src/content/docs/development/boba-backend/apis/API-guidelines.mdx
+++ b/src/content/docs/development/boba-backend/apis/API-guidelines.mdx
@@ -10,14 +10,14 @@ They're a subset of the excellent
 ## The Golden Rule
 
 1. **MUST** document every endpoint using the OpenAPI format (see
-   [How to Write Documentation](./creating-endpoints.md#documentation)).
+   [How to Write Documentation](../creating-endpoints#documenting-endpoints)).
 
 ## Request Format
 
 6. **MUST** use HTTP methods correctly.
    [(link)](https://opensource.zalando.com/restful-api-guidelines/#148)
    - For a more compact explanation see
-     [this guide](https://www.restapitutorial.com/lessons/httpmethods.html).
+     [this guide](https://www.restapitutorial.com/introduction/httpmethods).
 7. **MUST** avoid actions — think about resources.
    [(link)](https://opensource.zalando.com/restful-api-guidelines/#138)
    - See
