--- a/src/content/docs/development/boba-backend/apis/testing-endpoints.mdx
+++ b/src/content/docs/development/boba-backend/apis/testing-endpoints.mdx
@@ -25,7 +25,7 @@ in functionality.
 ## API testing
 
 While many
-[different types of tests](https://educative.io/blog/software-testing-types-101#functional-methods)
+[different types of tests](https://www.educative.io/blog/how-to-get-started-with-software-testing#functional-methods)
 exists, APIs are usually tested through integration tests. Integration tests
 ensure that multiple components (e.g. database, server) work together as
 expected. In the case of BobaBoard's API routes, integration tests cover the
