--- a/src/content/docs/development/boba-backend/backend-development-overview.mdx
+++ b/src/content/docs/development/boba-backend/backend-development-overview.mdx
@@ -68,13 +68,13 @@ information about any endpoint you need to add or modify:
 During the development phase you should:
 
 1. **Identify where the API endpoint should be placed:** see
-   [Routes and Endpoints Structure](docs/development/boba-backend/APIs/creating-endpoints#structure)
+   [Routes and Endpoints Structure](./apis/creating-endpoints#routes-structure)
 2. **Write the endpoint function** (if not already present): at this stage, it
    will simply throw an
    [HTTP 501 Not Implemented](https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/501)
    error.
 3. **Add or modify the endpoint OpenAPI definition:** see
-   [Documenting endpoints](docs/development/boba-backend/APIs/creating-endpoints#documentation).
+   [Documenting endpoints](./apis/creating-endpoints#documenting-endpoints).
 
 {/* TODO: We'll need to figure out how to mark not implemented functions in our OpenAPI spec. */}
 
@@ -98,7 +98,7 @@ needed, and come back once you're unblocked.
 6. **Add permissions middleware and update tests:** if the endpoint needs to be
    gated on special conditions (e.g. the user being logged in or a permission
    existing), add the necessary middleware to the endpoint. See
-   [Checking permissions](docs/development/boba-backend/permissions/check-permissions).
+   [Checking permissions](./permissions/check-permissions).
 
    <u>Make sure to also update tests</u> to check the correct HTTP status codes
    are returned.
@@ -106,7 +106,7 @@ needed, and come back once you're unblocked.
 7. **Use SQL queries and generated Zod types to write and validate the endpoint
    functionality.** With permission errors taken care of in step 6, it's now
    time to write the actual logic of the endpoint. If you need, you can use
-   [Postman](docs/development/boba-backend/using-postman) to test the endpoint
+   [Postman](./using-postman) to test the endpoint
    as you develop.
 
    {/* TODO: Document this better and then link to the correct page. */}
