--- a/src/content/docs/development/contribute/before-you-start.mdx
+++ b/src/content/docs/development/contribute/before-you-start.mdx
@@ -7,7 +7,7 @@ sidebar:
 
 import { Aside } from "@astrojs/starlight/components";
 
-Before you start, consider reading the [codebase overview](../intro) to
+Before you start, consider reading the [codebase overview](../../intro) to
 understand the different areas of the project and the technologies used in each
 of them.
 
@@ -29,7 +29,7 @@ this documentation better.
 
 In order to submit code, you will need a [GitHub account](https://github.com/).
 You can read more about
-[Using Github](/volunteering/coding/github/understanding-github).
+[Using Github](../../../volunteering/coding/github/understanding-github).
 
 ## Step 1 - Take a look at open issues
 
@@ -77,7 +77,7 @@ _just need to know_, so we can plan accordingly.**
 Ms. Boba (or another volunteer) will periodically ping you for updates. Just let
 her know what's up (including "nothing") and submit a pull request when you're
 ready. You can
-[learn more about the development lifecycle](../knowledge-base/development-lifecycle)
+[learn more about the development lifecycle](../../knowledge-base/development-lifecycle)
 in our knowledge base.
 
 <Aside type="tip" icon="star">
