--- a/src/content/docs/development/contribute/boba-components.mdx
+++ b/src/content/docs/development/contribute/boba-components.mdx
@@ -8,7 +8,7 @@ sidebar:
 import { Aside } from "@astrojs/starlight/components";
 
 \[[code](https://github.com/BobaBoard/boba-components),
-[demo](https://bobaboard-ui.netlify.app/)]
+[demo](https://bobaboard-ui.netlify.app)]
 
 boba-components is where BobaBoard's UI pieces (components) are developed.
 
@@ -86,7 +86,7 @@ You can now continue to the
 You should follow these instructions if you want to make parallel changes to
 boba-editor as part of updating boba-components.
 
-1. **[Install boba-editor](./boba-editor).**
+1. **[Install boba-editor](../boba-editor).**
 
    The rest of these instructions assume you're installing boba-editor in the
    same containing folder as boba-components.
@@ -165,7 +165,7 @@ yarn run storybook
 
 You should now have a DevServer running at
 [http://localhost:6006](http://localhost:6006) that will look something like
-[the online demo](https://boba-components.netlify.app/).
+[the online demo](https://bobaboard-ui.netlify.app).
 
 <Aside type="tip" icon="star">
 
