--- a/src/content/docs/development/contribute/boba-editor.mdx
+++ b/src/content/docs/development/contribute/boba-editor.mdx
@@ -8,7 +8,7 @@ sidebar:
 import { Aside } from "@astrojs/starlight/components";
 
 \[[code](https://github.com/BobaBoard/boba-editor),
-[demo](https://boba-editor.netlify.app/?path=/story/editor-preview--simple-editor)]
+[demo](https://bobaeditor.netlify.app)]
 
 boba-editor is BobaBoard's own extension of the
 [QuillJS text editor](https://quilljs.com/), and is responsible for anything
@@ -36,7 +36,7 @@ yarn install
 <Aside type="tip" icon="star">
 
 If you would prefer to use a GUI with GitHub, you can
-[fork and clone](https://docs.github.com/en/desktop/contributing-and-collaborating-using-github-desktop/adding-and-cloning-repositories/cloning-and-forking-repositories-from-github-desktop)
+[fork and clone](https://docs.github.com/en/desktop/adding-and-cloning-repositories/cloning-and-forking-repositories-from-github-desktop)
 via GitHub Desktop, then enter your new directory in a terminal and run
 `yarn install`.
 
@@ -62,7 +62,7 @@ yarn run storybook
 
 You should now have a DevServer running at
 [http://localhost:6006](http://localhost:6006) that will look something like
-[the online demo](https://boba-editor.netlify.app/).
+[the online demo](https://bobaeditor.netlify.app).
 
 <Aside type="tip" icon="star">
 
