--- a/src/content/docs/development/contribute/wsl.mdx
+++ b/src/content/docs/development/contribute/wsl.mdx
@@ -12,7 +12,7 @@ import { Aside } from "@astrojs/starlight/components";
 
 The following instructions are for Windows users only. If you use Linux or Mac
 and have already completed the steps in
-[Setup Your Development Environment](/development/start-developing/setting-up-dev-env),
+[Setup Your Development Environment](../setting-up-dev-env),
 you can skip forward to the next section.
 
 </Aside>
@@ -319,9 +319,9 @@ terminal. For help with useful terminal commands see the
 
 Now that you've navigated into your directory, you're ready to start cloning the
 various BobaBoard repos. See
-[Install boba-frontend](/development/start-developing/boba-frontend),
-[Install boba-backend](/development/start-developing/boba-backend), or
-[Install boba-components](/development/start-developing/boba-components)
+[Install boba-frontend](../boba-frontend),
+[Install boba-backend](../boba-backend), or
+[Install boba-components](../boba-components)
 for more details.
 
 <Aside type="note">
@@ -378,7 +378,7 @@ and WSL.
   path? Follow these instructions to jazz it up a bit.
 
 - Check out our other
-  [Recommended Tools](/development/knowledge-base/recommended-tools#recommended-vscode-extensions)
+  [Recommended Tools](../../knowledge-base/recommended-tools#recommended-vscode-extensions)
   for more extension recommendations!
 
 ## Quick Command Line Guide
