--- a/src/content/docs/development/knowledge-base/development-lifecycle.mdx
+++ b/src/content/docs/development/knowledge-base/development-lifecycle.mdx
@@ -20,7 +20,7 @@ process looks like. This page will:
 This document also includes relevant information about git and GitHub to
 introduce you to technical vocabulary you might run into. For more information
 on these subjects you can look at our
-[Git Notes](/development/legacy-pages/git-notes.md) page.
+[Git Notes](../../legacy-pages/git-notes) page.
 
 <Aside type="note">
 
@@ -103,7 +103,7 @@ contribute to one of Boba's codebases.
 <Aside type="note">
 
 If you've looked at our
-[Recommended Tools](/development/knowledge-base/recommended-tools.md)
+[Recommended Tools](../recommended-tools)
 document, you've seen we recommend Visual Studio Code (VS Code) as a code
 editor. One reason for this is its excellent integration with git. This lets you
 perform various tasks using the editor's user interface instead of typing
@@ -149,7 +149,7 @@ If you are coding for BobaBoard on Windows, we recommend setting up Windows
 Subsystem for Linux (WSL). When you create your folders for your BobaBoard
 project, they will need to be in the WSL file tree, not your normal Windows file
 explorer. For more in depth information please see
-[](/development/start-developing/wsl).
+[The BobaBoard Guide to Setting up WSL](../../contribute/wsl).
 
 </Aside>
 
