--- a/src/content/docs/development/legacy-pages/bobaboard-ui-codebase.mdx
+++ b/src/content/docs/development/legacy-pages/bobaboard-ui-codebase.mdx
@@ -6,12 +6,12 @@ sidebar:
 ---
 
 For installation instructions check out
-[Setting Up Your DevEnv](/development/start-developing/setting-up-dev-env).
+[Setting Up Your Developer Environment](../../contribute/setting-up-dev-env).
 
 ## Overview
 
 The boba-components Codebase contains all the code pertaining to the
-boba-components component ([demo](https://bobaboard-ui.netlify.app/)). It's
+boba-components component ([demo](https://bobaboard-ui.netlify.app)). It's
 written in Typescript and React.
 
 There are two important folders:
@@ -146,7 +146,7 @@ export default SidebarSection;
 
 ## Storybook
 
-See [How to use Storybook](./howtouse-storybook)
+See [How to use Storybook](../howtouse-storybook)
 
 We're currently moving to Storybook 6.0's
 [arg-based stories](https://storybook.js.org/docs/react/writing-stories/introduction#using-args),
