--- a/src/content/docs/development/legacy-pages/bobaeditor-codebase-guide.mdx
+++ b/src/content/docs/development/legacy-pages/bobaeditor-codebase-guide.mdx
@@ -6,13 +6,13 @@ sidebar:
 ---
 
 For installation instructions check out
-[Setting Up Your DevEnv](/development/start-developing/before-you-start).
+[Setting Up Your Developer Environment](../../contribute/setting-up-dev-env).
 
 ## Overview
 
 The [boba-editor Codebase](https://github.com/BobaBoard/boba-editor) contains
 all code pertaining to BobaBoard's text editing capabilities
-([see demo](https://boba-editor.netlify.app/)). It's written in Typescript and
+([see demo](https://bobaeditor.netlify.app)). It's written in Typescript and
 React.
 
 There are two important folders:
@@ -45,8 +45,6 @@ line.
 
 TODO: add a quick overview of how the delta format works to help people get a
 rough understanding of it.
-
-> [Actually, this exists now!](../boba-editor/the-delta-format)
 
 ## Custom Nodes & Embeds
 
@@ -121,7 +119,7 @@ Beside the Editor itself, boba-editor's package exports include:
 
 ## Storybook
 
-See [How to use Storybook](./howtouse-storybook)
+See [How to use Storybook](../howtouse-storybook)
 
 ## Debugging
 
@@ -157,5 +155,5 @@ expected. Yes, this is less than ideal.
 [BackstopJS](https://github.com/garris/BackstopJS) is technically set up for
 this codebase, but it requires manual set up for every story in storybook and
 that's also terrible. If this is something you'd like to tackle,
-[Implement Storybook Testing (Notion)](https://www.notion.so/Implement-Storybook-Testing-d4d15ca68a3c4183b5cc67fcf8dd7d06)
+[Implement Storybook Testing (Notion)](https://glamorous-trilby-5ae.notion.site/Implement-Storybook-Testing-d4d15ca68a3c4183b5cc67fcf8dd7d06)
 is the task for you!
