--- a/src/content/docs/project/features/identities/identity-management.mdx
+++ b/src/content/docs/project/features/identities/identity-management.mdx
@@ -61,7 +61,7 @@ the `user data` rather than the data of the `Identity` associated with the
 
 When a `Realm` or a `Board` supports anonymity, BobaBoard randomly selects an
 `Identity` to associate with the user's activity. You can read more about
-anonymous identity selection in the [BobaDex page](bobadex.md).
+anonymous identity selection in the [BobaDex page](../bobadex).
 
 ### Non-Anonymous Boards/Realms
 
