--- a/src/content/docs/project/roadmap/priorities-and-status.mdx
+++ b/src/content/docs/project/roadmap/priorities-and-status.mdx
@@ -6,14 +6,14 @@ sidebar:
 ---
 
 inspiration:
-https://docs.oscollective.org/guides/marketing-publicity-roadmaps-and-comms#why-a-roadmap
+https://docs.oscollective.org/resources/resources/marketing-publicity-roadmaps-and-comms#why-a-roadmap
 
 _Last updated: March 23th, 2023_
 
 **Current phase:** pre-beta.
 
 This page offers a global overview of BobaBoard's current roadmap. You can also
-check out [our active sprints and projects](./sprints-and-projects) for more
+check out [our active sprints and projects](https://github.com/orgs/BobaBoard/projects) for more
 specific details.
 
 ## Current priorities
@@ -49,7 +49,7 @@ _Last updated: March 23th, 2023.
 [Previous update October 13th, 2022](https://github.com/BobaBoard/boba-docs/commit/2fd18c963e65a807a8c0fa743c6285dda9d70bbd)._
 
 You can find an overview of the 2022 activities
-[in our current new year retrospective](https://www.bobaboard.com/blog/development-logs-10)
+[in our current new year retrospective](https://bobaboard.com/retro/development-logs-10)
 released in March 2023.
 
 ## Next up
@@ -58,8 +58,7 @@ _Last updated: March 23th, 2023.
 [Previous update October 13th, 2022](https://github.com/BobaBoard/boba-docs/commit/2fd18c963e65a807a8c0fa743c6285dda9d70bbd)._
 
 You can find a broad overview of the 2023 roadmap
-[in the roadmap section of our current new year retrospective](https://www.bobaboard.com/blog/development-logs-10#the-2023-roadmap-part-1-main-focus-areas)
+[in the roadmap section of our current new year retrospective](https://bobaboard.com/retro/development-logs-10#the-2023-roadmap-part-1-main-focus-areas)
 released in March 2023.
 
-For the most up-to-date information, check the
-[sprints and projects](./sprints-and-projects) page.
+For the most up-to-date information, check the sprints and projects [here](https://github.com/orgs/BobaBoard/projects).
