--- a/src/content/docs/project/wips/extensible-dropdown.mdx
+++ b/src/content/docs/project/wips/extensible-dropdown.mdx
@@ -91,13 +91,13 @@ interface DropdownProps {
 ## What We Have
 
 - An example of a dropdown with filterable options in
-  [BoardSelector](https://github.com/BobaBoard/boba-components/blob/master/src/tags/BoardSelector.tsx).
+  [BoardSelector](https://github.com/BobaBoard/boba-components/blob/main/src/tags/BoardSelector.tsx).
 - A gif search component
-  ([Tenor Keyboard](https://github.com/BobaBoard/boba-editor/blob/master/src/TenorKeyboard.js)
+  ([Tenor Keyboard](https://github.com/BobaBoard/boba-editor/blob/main/src/TenorKeyboard.tsx)
   in the editor codebase) made by shamefully hacking
   [React Tenor](https://github.com/CultureHQ/react-tenor) to suit our needs.
 - If we want to have a masonry-style image layout we can reuse
-  [MasonryView](https://github.com/BobaBoard/boba-components/blob/master/src/layout/MasonryView.tsx).
+  [MasonryView](https://github.com/BobaBoard/boba-components/blob/main/src/feeds/MasonryView.tsx).
 
 ## Roadmap
 
