--- a/src/content/docs/users/how-to/tagging.mdx
+++ b/src/content/docs/users/how-to/tagging.mdx
@@ -61,8 +61,8 @@ Categories have a blue pill-shaped background and have white text.
 Set by putting `cn:` at the beginning of a tag, content notices are moved above
 the thread to give people a warning about potentially NSFW, triggering, or
 upsetting content that are in the thread, it's comments, or contributions so
-that they can skip it, [mute it](/users/howto/threads#thread-menu),
-[hide it](/users/howto/threads#thread-menu), or be better prepared.
+that they can skip it, [mute it](../threads#thread-menu),
+[hide it](../threads#thread-menu), or be better prepared.
 
 Content notices appear with a orange-yellow pill background (reminiscent of a
 caution road sign) with black text.
