--- a/src/content/docs/users/intro.mdx
+++ b/src/content/docs/users/intro.mdx
@@ -70,11 +70,7 @@ There are currently two Realms making up BobaBoard:
 For more information on each Realm, visit their sections in the guide.
 
 In the future, there will be opportunities for others to establish their own
-Realms. While we're still in the very early stages of planning, you can fill out
-the
-[Realms Interest Form](https://docs.google.com/forms/d/e/1FAIpQLScxdJkWmcJqWQQOOY1CM9oxmXDDrdBn9m1Bu0SYbEeNkNr1Jw/viewform)
-to help us understand the needs of our public and be contacted with future news
-and surveys.
+Realms.
 
 ### Boards
 
