--- a/src/content/docs/users/self-hosting/bobaboard-installation.mdx
+++ b/src/content/docs/users/self-hosting/bobaboard-installation.mdx
@@ -23,7 +23,7 @@ you wish.
 
 BobaBoard is easiest to configure on a server running NixOS. If you need help
 with getting your server set up, head back to
-[Configuring a NixOS Server](https://docs.bobaboard.com/docs/users/selfhosting/serversetup)
+[Configuring a NixOS Server](../server-setup)
 
 ## Installing BobaBoard on a NixOS Server
 
