--- a/src/content/docs/volunteering/coding/github/understanding-github.mdx
+++ b/src/content/docs/volunteering/coding/github/understanding-github.mdx
@@ -5,7 +5,7 @@ sidebar:
   order: 1
 ---
 
-[GitHub](https://github.com/) is a code collaboration website, that leverages a
+[GitHub](https://github.com) is a code collaboration website, that leverages a
 tool called **git** to more easily manage different versions of a codebase
 (a.k.a. **version control**). Git organizes code into **repositories** (ak.a.
 **repos**). Each repo contains the files for a given project.
@@ -17,14 +17,14 @@ tool called **git** to more easily manage different versions of a codebase
 > and you can then access these versions to compare or restore them as needed.
 
 You can
-[learn more about Git, GitHub and Version Control](https://blog.devmountain.com/git-vs-github-whats-the-difference)
+[learn more about Git, GitHub and Version Control](https://web.archive.org/web/20210308122453/https://blog.devmountain.com/git-vs-github-whats-the-difference/)
 in this article.
 
 For GitHub tutorials, check out the
-[GitHub Learning Lab](https://lab.github.com/).
+[GitHub Learning Lab](https://github.com/apps/github-learning-lab).
 
 For instructions on installing git, head to the
-[Setup Your Development Environment](/development/start-developing/setting-up-dev-env#gitgithub)
+[Setup Your Development Environment](../../../../development/contribute/setting-up-dev-env#gitgithub)
 guide.
 
 ## How Git[Hub] Works
