--- a/src/content/docs/volunteering/coding/sprints.mdx
+++ b/src/content/docs/volunteering/coding/sprints.mdx
@@ -16,9 +16,8 @@ sprint.
 A sprint is a 6-weeks period where BobaBoard volunteers work together on tasks
 centering around a theme.
 
-Previous themes include "launching Realms" and "fixing user annoyances". You can
-see past, present and future sprints in the
-[sprints and projects section of our roadmap](docs/project/roadmap/sprints-and-projects.mdx).
+Previous themes include "launching Realms" and "fixing user annoyances".
+You can see past, present and future sprints [here](https://github.com/orgs/BobaBoard/projects).
 
 ## What does a sprint look like
 
