--- a/src/content/docs/volunteering/communications/editing-bobadocs.mdx
+++ b/src/content/docs/volunteering/communications/editing-bobadocs.mdx
@@ -14,7 +14,7 @@ You will need:
 
 - A [GitHub](https://github.com) account. (A brief explanation of GitHub is
   available in our
-  [Knowledge Base](/volunteering/coding/github/understanding-github). Any
+  [Knowledge Base](../../coding/github/understanding-github). Any
   `git terminology` use in this guide is also explained there.)
 
 You will NOT need:
@@ -26,7 +26,7 @@ You will NOT need:
 Only the BobaLord is allowed to modify the original copy of boba-docs. To make
 changes, you'll have to your own copy of the files. This process is called
 forking, and you can read more about it in our
-[knowledge base](/volunteering/coding/github/understanding-github).
+[knowledge base](../../coding/github/understanding-github).
 
 **If you already have a copy of boba-docs, skip to
 [Keeping your files updated](#keeping-your-files-updated).**
@@ -35,7 +35,7 @@ Here are the steps to do this:
 
 1. Make sure you're logged in to GitHub.
 2. Navigate to the main repo for the site at
-   [https://github.com/essential-randomness/boba-docs](https://github.com/essential-randomness/boba-docs).
+   [https://github.com/BobaBoard/boba-docs](https://github.com/BobaBoard/boba-docs).
    (You can also get there by clicking the "GitHub" link on the top right corner
    of the boba-docs site!)
 3. Click the "Fork" button on the top right corner of the page.
@@ -49,7 +49,7 @@ Here are the steps to do this:
 <Aside type="tip" icon="star">
 
 By the way! To do this right, you'd also need to branch. Read our
-[knowledge base](/volunteering/coding/github/understanding-github) to learn
+[knowledge base](../../coding/github/understanding-github) to learn
 more about branching.
 
 </Aside>
@@ -80,7 +80,7 @@ this easy to do. Here's how you get to it:
 Remember how the last tip mentioned branching? That last bullet is there to keep
 you from accidentally creating a branch (something outside the scope of this
 guide). If you do create a new branch and need to delete it, see the
-[appendix](./editing-boba-docs-appendix/#deleting-a-branch) for how to do that.
+[appendix](../editing-bobadocs-appendix#deleting-a-branch) for how to do that.
 
 </Aside>
 
