--- a/src/content/docs/volunteering/experience/volunteer-application.mdx
+++ b/src/content/docs/volunteering/experience/volunteer-application.mdx
@@ -80,7 +80,7 @@ By signing up for the volunteering newsletter you certify you're of legal age.
 Right now we're onboarding people based on teams. Since we do not have fixed
 roles, you will be able to move around and try on different tasks after your
 onboarding. You can learn more about how roles work in our organization in
-[the BobaBoard Teams(s) page](../team/index.md).
+[the BobaBoard Teams(s) page](../../team).
 
 ### Q: What are the expectations for volunteers? What if my availability changes?
 
@@ -91,7 +91,7 @@ unpredictably hit the fan.
 
 If you have to walk back on a commitment made, we won't hold it against you. To
 learn more about volunteering expectations go
-[to the Volunteering in Practice page](in-practice.md).
+[to the Volunteering in Practice page](../in-practice).
 
 ### Q: I signed up for volunteering but never received a reply!
 
