--- a/src/content/docs/development/boba-backend/getting-started.mdx
+++ b/src/content/docs/development/boba-backend/getting-started.mdx
@@ -10,7 +10,7 @@ import { Aside } from "@astrojs/starlight/components";
 <Aside type="note" title="Important">
 
 Before continuing with this section, **follow the installation instructions** in
-our [Contribute section](/development/start-developing/boba-backend).
+our [Contribute section](../contribute/boba-backend).
 
 </Aside>
 
@@ -87,7 +87,7 @@ see a list of all the realm properties in
 <Aside type="tip" icon="star">
 
 Accessing a URL through a browser is equivalent to making a GET request to the
-same URL through [Postman](/development/boba-backend/using-postman).
+same URL through [Postman](./using-postman).
 
 </Aside>
 
