--- a/src/content/docs/development/intro.mdx
+++ b/src/content/docs/development/intro.mdx
@@ -42,7 +42,7 @@ purpose and set of technologies:
 ## boba-editor
 
 \[[code](https://github.com/BobaBoard/boba-editor),
-[demo](https://boba-editor.netlify.app/?path=/story/editor-preview--simple-editor)]
+[demo](https://bobaeditor.netlify.app)]
 
 boba-editor is BobaBoard's own extension of the
 [QuillJS text editor](https://quilljs.com/), and is responsible for anything
@@ -67,13 +67,13 @@ embeds, images and gifs.
 ## boba-components
 
 \[[code](https://github.com/BobaBoard/boba-components),
-[demo](https://bobaboard-ui.netlify.app/)]
+[demo](https://bobaboard-ui.netlify.app)]
 
 boba-components is where BobaBoard's UI pieces (components) are developed, as
 separate from the "frontend/server logic" as possible to facilitate reuse and
 (one day) ease of testing. This is made possible by using
 [StoryBook](https://storybook.js.org/), which you can see in action at this
-[demo link](https://bobaboard-ui.netlify.app/).
+[demo link](https://bobaboard-ui.netlify.app).
 
 <Aside type="tip" icon="star">
 
