--- a/src/content/docs/users/etiquette.mdx
+++ b/src/content/docs/users/etiquette.mdx
@@ -63,7 +63,7 @@ only apply to v0 and Fandom Coders Realms.
   if moderators add content notices to your posts for you.
 
   For more information on content notices and tagging, please see
-  [Tagging](/users/howto/tagging).
+  [Tagging](../how-to/tagging).
 
 ## Posting Guidelines
 
