--- a/src/content/docs/users/v0/rules.mdx
+++ b/src/content/docs/users/v0/rules.mdx
@@ -5,4 +5,4 @@ lastUpdated: 2025-04-20
 
 More info coming soon on the rules and posting guidelines for v0. We've been
 doing this a while now, please continue playing nice and be sure to follow the
-[General BobaBoard Etiquette](/users/etiquette)
+[General BobaBoard Etiquette](../../etiquette)
