Fixing image and adding alt text
Fixed image on `users/how-to/threads` page and added missing alt text for an image on the `volunteering/team` page, as per the alt text on the former image.

--- a/src/content/docs/users/how-to/threads.mdx
+++ b/src/content/docs/users/how-to/threads.mdx
@@ -74,10 +74,7 @@ about typos and editor weirdness.
 Since BobaBoard Threads cannot be edited, you may be wondering how you can
 delete a thread.
 
-<img
-  src="/img/userguide/youdon't.png"
-  alt="That's the neat thing: you don't."
-/>
+![That's the neat thing: you don't.](../../../../assets/img/userguide/youdon't.png)
 
 Right now if you'd like to have a thread (or comment or contribution) deleted,
 please post to that effect in the thread (or underneath the
