--- a/src/content/docs/volunteering/team/index.mdx
+++ b/src/content/docs/volunteering/team/index.mdx
@@ -16,7 +16,7 @@ ourselves effectively. Expect things to be incomplete or change unexpectedly.
 
 ## How We Assign Roles
 
-![TODO: alt text](./wedont.png)
+![That's the neat thing: we don't.](../../../../assets/img/volunteer/wedon't.png)
 
 While we're still in the process of setting things up, we plan to use the Teal
 Organization framework. In this framework, roles are not strictly assigned or
