Fixing broken links + a couple of other things (#117)
* Fixing broken links

Fixed broken links, removed a couple references to the Delta Format and the Realms Interest Form. A couple of links were changed to their Wayback Machine versions until a new link gets found (on the `using-postman` and `understanding-github` pages). Also changed all internal links to relative paths for consistency.

Note: Some relative paths (like those in the root of `boba-backend` need to use `./` instead of `../` for other pages in the same folder because they're auto-generated (probably).

Note: Links to `/api-guidelines` are actually case-sensitive and while the filename has it capitalised, the generated URL path is lowercase, so links to that page had to be changed from `API-guidelines` to `api-guidelines`.)

* Fixing bold markdown

* Fixing image and adding alt text

Fixed image on `users/how-to/threads` page and added missing alt text for an image on the `volunteering/team` page, as per the alt text on the former image.

--- a/src/content/docs/users/how-to/threads.mdx
+++ b/src/content/docs/users/how-to/threads.mdx
@@ -74,10 +74,7 @@ about typos and editor weirdness.
 Since BobaBoard Threads cannot be edited, you may be wondering how you can
 delete a thread.
 
-<img
-  src="/img/userguide/youdon't.png"
-  alt="That's the neat thing: you don't."
-/>
+![That's the neat thing: you don't.](../../../../assets/img/userguide/youdon't.png)
 
 Right now if you'd like to have a thread (or comment or contribution) deleted,
 please post to that effect in the thread (or underneath the
@@ -109,7 +106,7 @@ types of posts.
   is especially useful in situations where the OP may be asking for certain
   conversations to stop or for certain content not to be placed in their thread.
   Please see
-  [Etiquette: Posting Guidelines](/users/etiquette#posting-guidelines) for
+  [Etiquette: Posting Guidelines](../../etiquette#posting-guidelines) for
   more information.
 
 - **New** - the red NEW badge identifies new threads, comments, and
