--- a/src/content/docs/development/contribute/setting-up-dev-env.mdx
+++ b/src/content/docs/development/contribute/setting-up-dev-env.mdx
@@ -56,13 +56,13 @@ install WSL.
 
 For a step-by-step guide to setting up WSL, installing the below pre-requisites,
 and getting set-up to develop for BobaBoard using WSL see
-[The BobaBoard Guide to Setting up WSL](/development/start-developing/wsl)
+[The BobaBoard Guide to Setting up WSL](../wsl)
 
 ### Git/GitHub
 
 **You will use Git and a [GitHub](https://github.com/) account to download the
-BobaBoard code, make changes and send them out for review. **You can
-[learn more about Git and GitHub](/volunteering/coding/github/understanding-github)
+BobaBoard code, make changes and send them out for review.**You can
+[learn more about Git and GitHub](../../../volunteering/coding/github/understanding-github)
 in our knowledge base.
 
 To install git, follow the
@@ -131,7 +131,7 @@ Docker will be used to run BobaBoard's
 [**PostgreSQL**](https://www.postgresql.org/) database and the
 [**Redis**](https://redis.io/topics/quickstart) cache without globally
 installing them on your system. You can
-[learn more about caches](.../../../knowledge-base/caching) in our knowledge
+[learn more about caches](../../knowledge-base/caching) in our knowledge
 base.
 
 ## Next Steps
