Replaced WayBack Machine links

--- a/src/content/docs/development/boba-backend/using-postman.mdx
+++ b/src/content/docs/development/boba-backend/using-postman.mdx
@@ -40,7 +40,7 @@ Before authenticating Postman requests, you will need to set up a Postman
 environment.
 
 1. Follow the
-   ["variables in Postman"](https://web.archive.org/web/20241014234859/https://www.javatpoint.com/variables-in-postman)
+   ["variables in Postman"](https://www.geeksforgeeks.org/software-testing/variables-in-postman-scope-use-cases-and-advanced-features/)
    guide to set up a Postman environment.
 
 2. Set up a `email` variable in your environment with your BobaBoard login
