--- a/src/content/docs/volunteering/coding/github/understanding-github.mdx
+++ b/src/content/docs/volunteering/coding/github/understanding-github.mdx
@@ -16,9 +16,8 @@ tool called **git** to more easily manage different versions of a codebase
 > versions. Version control takes snapshots of every revision to your project,
 > and you can then access these versions to compare or restore them as needed.
 
-You can
-[learn more about Git, GitHub and Version Control](https://web.archive.org/web/20210308122453/https://blog.devmountain.com/git-vs-github-whats-the-difference/)
-in this article.
+You can learn more about git and GitHub in [this article](https://docs.github.com/en/get-started/start-your-journey/about-github-and-git)
+(or for a more in-depth look, consider [Volume 0 of The Fujoshi Guide to Web Development](https://www.fujoweb.dev/volume-0)).
 
 For GitHub tutorials, check out the
 [GitHub Learning Lab](https://github.com/apps/github-learning-lab).
